syntax = "proto3";
option go_package = "./pb";
package proto;

message DeleteUserRequest {
  string email = 1;
}

message UserResponseMessage {
  string message = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse{
  string uuid = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message GetUserEmailByIdRequest {
  string uuid = 1;
}

message GetUserEmailByIdResponse {
  string email = 1;
  string address = 2;
  string dateOfBirth = 3;
  string firstName = 4;
  string lastName = 5;
  string phone = 6;
  string role = 7;
  string id = 8;
}

message UpdateUserRequest {
  string email = 1;
  string address = 2;
  string dateOfBirth = 3;
  string firstName = 4;
  string lastName = 5;
  string phone = 6;
  string role = 7;
}

message GetUsersRequest {
  uint32 page = 1;
  uint32 limit = 2;
}

message GetUsersResponse {
  repeated GetUserEmailByIdResponse users = 1;
  string numberOfUsers = 2;
}

message AddAdminRequest {
  string email = 1;
}

message SetUserRoleRequest {
  string email = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string role = 3;
  string address = 4;
  string dateOfBirth = 5;
  string firstName = 6;
  string lastName = 7;
  string phone = 8;
}